--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@types/jest": "^23.3.1",
     "babel-polyfill": "^6.26.0",
-    "eosjs-ecc": "^4.0.1",
+    "eosjs-ecc-rn": "^4.0.4",
     "text-encoding": "^0.6.4"
   },
   "devDependencies": {
