--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jafri/eosjs2",
-  "version": "20.0.0",
+  "version": "20.0.1-e34c16e.0",
   "description": "Talk to eos API",
   "main": "dist/index.js",
   "scripts": {
