--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eosjs-rn",
-  "version": "20.0.0",
+  "version": "20.0.0-rn",
   "description": "Talk to eos API",
   "main": "dist/index.js",
   "scripts": {
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "babel-runtime": "6.26.0",
-    "eosjs-ecc-rn": "4.0.6",
+    "eosjs-ecc-rn": "4.0.6-rn",
     "text-encoding": "0.7.0"
   },
   "devDependencies": {
