--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jafri/eosjs2",
-  "version": "20.0.1-e34c16e.157",
+  "version": "20.0.1-e34c16e.161",
   "description": "Talk to eos API",
   "main": "dist/index.js",
   "scripts": {
@@ -29,11 +29,11 @@
   },
   "dependencies": {
     "babel-runtime": "6.26.0",
-    "eosjs-ecc-rn": "4.0.6-rn"
+    "text-encoding": "0.7.0"
   },
   "devDependencies": {
     "@blockone/tslint-config-blockone": "3.0.0",
-    "@types/elliptic": "^6.4.10",
+    "@types/elliptic": "^6.4.9",
     "@types/jest": "24.0.6",
     "@types/node": "11.9.4",
     "@types/text-encoding": "0.0.35",
@@ -48,7 +48,6 @@
     "json-loader": "0.5.7",
     "mocha": "5.2.0",
     "mochawesome": "3.1.1",
-    "text-encoding": "0.7.0",
     "ts-jest": "24.0.0",
     "ts-loader": "5.3.3",
     "tslint": "5.12.1",
