--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest src/tests/*eosjs*",
     "test-node": "jest src/tests/*node*",
     "test-all": "yarn test && yarn test-node && yarn cypress",
-    "build": "tsc -p ./tsconfig.json && cp src/ripemd.es5.js dist/ripemd.js",
+    "build": "tsc -p ./tsconfig.json",
     "build-web": "webpack --config webpack.prod.js && webpack --config webpack.debug.js",
     "build-production": "yarn build && yarn build-web && yarn test-all",
     "clean": "rm -rf dist",
@@ -29,10 +29,13 @@
   },
   "dependencies": {
     "babel-runtime": "6.26.0",
+    "bs58": "^4.0.1",
+    "ripemd-ts": "0.0.1",
     "text-encoding": "0.7.0"
   },
   "devDependencies": {
     "@blockone/tslint-config-blockone": "3.0.0",
+    "@types/bs58": "^4.0.0",
     "@types/elliptic": "^6.4.9",
     "@types/jest": "24.0.6",
     "@types/node": "11.9.4",
