--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "moduleResolution": "node",
         "declaration": true,
         "downlevelIteration": true,
+        "esModuleInterop": true,
         "skipLibCheck": true,
         "lib": [
             "es2017",
