--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jafri/eosjs2",
-  "version": "20.0.1-e34c16e.178",
+  "version": "20.0.1-e34c16e.183",
   "description": "Talk to eos API",
   "main": "dist/index.js",
   "scripts": {
@@ -23,23 +23,19 @@
   },
   "author": "block.one",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Game-X-Coin/eosjs-rn.git"
-  },
   "dependencies": {
-    "babel-runtime": "6.26.0",
     "bs58": "^4.0.1",
-    "ripemd-ts": "0.0.1",
-    "text-encoding": "0.7.0"
+    "ripemd-ts": "0.0.1"
   },
   "devDependencies": {
+    "babel-runtime": "6.26.0",
     "@blockone/tslint-config-blockone": "3.0.0",
     "@types/bs58": "^4.0.0",
     "@types/elliptic": "^6.4.9",
     "@types/jest": "24.0.6",
     "@types/node": "11.9.4",
     "@types/text-encoding": "0.0.35",
+    "text-encoding": "0.7.0",
     "babel-cli": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.7.0",
